# Pascals-Triangle

./: .gitignore  LICENSE  README.md  setup.cfg
pascals_triangle/: __init__.py  __main__.py  pascals_triangle.py
