[metadata]
name = Pascals-Triangle-PJL
version = 0.0.1
author = Peter Jackson Link III
author_email = pjacksonlink@gmail.com
description = Generate Pascal's triangle.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.0

[options.entry_points]
console_scripts =
    pascals-triangle = pascals_triangle:main
